# KrKrTools

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/KrKrDescrambler-rs/: krkr_descrambler.rs  krkr_scrambler.rs
src/KrKrDescrambler-rs/units/: encode_tools.rs  header.rs  mod.rs
src/KrKrDescrambler-rs/units/scrambler/: mod.rs  mode0.rs  mode1.rs  mode2.rs
src/ScnTools/: scn_build.rs
src/ScnTools/scn/: models.rs
src/XP3Tools/: xp3pack.rs  xp3unpack.rs
src/XP3Tools/units/: constant.rs  encode_tool.rs  mod.rs  models.rs  path_tool.rs  xp3parse.rs  zlib_tool.rs
