[package]
name = "KrKrTools"
version = "0.1.0"
edition = "2024"
authors = ["XuanRikka <xuanrikka@qq.com>"]
license = "MIT"

[[bin]]
name = "KrKrDescrambler-rs"
path = "src/KrKrDescrambler-rs/krkr_descrambler.rs"

[[bin]]
name = "KrKrScrambler-rs"
path = "src/KrKrDescrambler-rs/krkr_scrambler.rs"

[[bin]]
name = "XP3Pack"
path = "src/XP3Tools/xp3pack.rs"

[[bin]]
name = "xp3unpack"
path = "src/XP3Tools/xp3Unpack.rs"

[[bin]]
name = "test"
path = "src/XP3Tools/test.rs"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
overflow-checks = false

[dependencies]
adler = "1.0.2"
binrw = "0.15.0"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = { version = "1.1.2", features = ["zlib"] }
scroll = "0.13.0"
walkdir = "2.5.0"
