[package]
name = "KrKrTools"
version = "0.1.0"
edition = "2024"
authors = ["XuanRikka <xuanrikka@qq.com>"]
license = "MIT"

[[bin]]
name = "krkrdescrambler"
path = "src/KrKrDescrambler-rs/krkr_descrambler.rs"

[[bin]]
name = "krkrscrambler"
path = "src/KrKrDescrambler-rs/krkr_scrambler.rs"

[[bin]]
name = "xp3pack"
path = "src/XP3Tools/xp3pack.rs"

[[bin]]
name = "xp3unpack"
path = "src/XP3Tools/xp3unpack.rs"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
overflow-checks = false

[dependencies]
adler = "1.0.2"
binrw = "0.15.0"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = { version = "1.1.2", features = ["zlib-ng"] }
walkdir = "2.5.0"
