[package]
name = "KrKrTools"
version = "0.1.2"
edition = "2024"
authors = ["XuanRikka <xuanrikka@qq.com>"]
license = "MIT"

[[bin]]
name = "krkr-descrambler"
path = "src/KrKrDescrambler-rs/krkr_descrambler.rs"

[[bin]]
name = "krkr-scrambler"
path = "src/KrKrDescrambler-rs/krkr_scrambler.rs"

[[bin]]
name = "xp3pack"
path = "src/XP3Tools/xp3pack.rs"

[[bin]]
name = "xp3unpack"
path = "src/XP3Tools/xp3unpack.rs"

[[bin]]
name = "scn-build"
path = "src/ScnTools/scn_build.rs"

[[bin]]
name = "scn-decompile"
path = "src/ScnTools/scn_decompile.rs"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
overflow-checks = false
panic = "abort"

[dependencies]
adler = "1.0.2"
binrw = "0.15.0"
clap = { version = "4.5.48", features = ["derive"] }
flate2 = { version = "1.1.2", features = ["zlib-ng"] }
walkdir = "2.5.0"
